--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="Pt-Br">
   <head>
-      <title>Game Mania</title>
+      <title>Peterson - Front End</title>
       <base href="/">
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="description" content="Programador Front-End, Senai.">
-      <meta name="keywords" content="HTML, CSS, JavaScript, Senai">
+      <meta name="description" content="Programador Front-End.">
+      <meta name="keywords" content="HTML, CSS, JavaScript, Angular, Bootstrap">
       <meta name="author" content="Peterson R.">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
       <link rel="icon" href="favicon.ico" type="image/x-icon">
